completed unit tests for IORedirHandler